--- a/src/App.css
+++ b/src/App.css
@@ -3,28 +3,76 @@
   height: 100%;
   width: 100%;
   background-image: url("image4.jpg");
+  background-color: #100F10;
   background-size: 100%;
   background-repeat: no-repeat;
-  /*background-color: #100F10;*/
   color: rgb(228, 204, 204);
   flex-direction: column;
+  animation: transitionIn 1s;
+}
+@keyframes transitionIn{
+  from{
+    opacity: 0;
+    transform: rotateX(10deg);
+  }
+  to{
+    opacity: 1;
+    transform: rotateX(-10);
+  }
 }
 
 .header{
   display: flex;
-  flex: 1 0 10%;
+  flex: 1 0 12%;
   justify-content: center;
   align-items: center;
+  background-color: #130404;
+}
+
+.menu-bar{
+  display: flex;
+  flex: 1 1 20%;
+  padding: 8px;
+}
+
+.btn-style{
+  padding: 8px;
+  font-size: 15px;
+  font-weight: 500;
+  background-color: #4a0c0c;
+  color: rgb(228, 204, 204);
+  border: 0px;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+
+
+.info{
+  display: flex;
+  flex: 1 1 auto;
+}
+.post{
+  display: flex;
+  flex: 1 1 auto;
+}
+
+.btn-style:hover{
+  transition: 1s;
+  background: rgb(140, 97, 16);
 }
 
 .header-title{
-  font-weight: 700;
+  display: flex;
+  flex: 1 1 80%;
+  font-weight: 300;
+  justify-content: center;
   font-size: 30px;
 }
 
 .container-content{
   display: flex;
-  flex: 1 1 90%;
+  flex: 1 1 88%;
   flex-direction: row;
   padding: 8px;
 }
@@ -81,11 +129,13 @@ input{
   width: 100%;
   text-align: center;
   background-color: #2ea44f;
-  border: 0px solid;
+  border: 1px solid green;
   border-radius: 6px;
   color:#242424;
   cursor: pointer;
+  margin: 18px;
 }
+
 .submit-button:hover{
   transition: 0.5s;
   background-color:  #22863a;
@@ -102,4 +152,41 @@ input{
   background-color: white;
   justify-content: center;
   width: 70%;
+}
+
+@media only screen and (max-width: 720px) {
+  
+  .header{
+    display: flex;
+    flex: 1 0 12%;
+    justify-content: center;
+    align-items: center;
+    background-color: #130404;
+  }
+
+  .header-title{
+    display: flex;
+    flex: 1 1 50%;
+    font-weight: 300;
+    justify-content: center;
+    font-size: 20px;
+  }
+  .menu-bar{
+    display: flex;
+    flex: 1 1 50%;
+    padding: 8px;
+  }
+
+  .container-content_left{
+    display: flex;
+    flex: 0 1 0%;
+  }
+  
+  .container-content_right{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
 }
