feat: add google auth

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
     flex-direction: row;
     padding: 8px;
     justify-content: center;
+    align-items: center;
   }
 }
 @keyframes transitionIn{
