feat: add log-out

--- a/src/pages/matchday/index.scss
+++ b/src/pages/matchday/index.scss
@@ -2,7 +2,7 @@
   display: flex;
   height: 100%;
   width: 100%;
-  background-image: url("../components/static/img/image.jpg");
+  background-image: url("../../static/img/image.jpg");
   background-color: #100F10;
   background-size: 100%;
   background-repeat: no-repeat;
